[package]
name = "dose3"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
inquire = "0.7.5"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sysinfo = "0.35.2"  
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
swc_common = "13.0.1"           # หรือเวอร์ชันล่าสุดที่คุณใช้
swc_ecma_parser = "17.0.1"
swc_ecma_codegen = "15.0.1"
parcel_css = "=1.0.0-alpha.32"
html5ever = "0.26.0"
markup5ever_rcdom = "0.5.3-unofficial"