[package]
name = "dose3"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
inquire = "0.7.5"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sysinfo = "0.35.2"  
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dprint-plugin-typescript = "0.95.7"
dprint-plugin-json = "0.20.0"
dprint-plugin-css = "0.2.3"
anyhow = "1.0"